--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/Ejemplo.DemoComponent.csproj
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/Ejemplo.DemoComponent.csproj
@@ -37,6 +37,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ejemplo.Components\Ejemplo.Components.csproj" />
+    <ProjectReference Include="..\Ejemplo.DataManager\Ejemplo.DataManager.csproj" />
+    <ProjectReference Include="..\Ejemplo.Utils\Ejemplo.Utils.csproj" />
   </ItemGroup>
 
 </Project>
