--- a/Alpino/Ejemplo/Ejemplo.Web/appsettings.json
+++ b/Alpino/Ejemplo/Ejemplo.Web/appsettings.json
@@ -6,9 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=10.0.5.19;Database=SGM_DESARROLLO;User ID=movpark;Password=movparkSql;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Data Source=10.0.5.19;Database=SGM_DESARROLLO;User ID=movpark;Password=movparkSql;TrustServerCertificate=true;MultipleActiveResultSets=true"
-    //"DefaultConnection": "Data Source=sql02\\sql02;Database=SGM_HOMOLOGACION;User ID=movpark;Password=movparkSql;TrustServerCertificate=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=DEV;Database=Ejemplo_DESARROLLO; TrustServerCertificate=true;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Data Source=10.0.5.19;Database=SGM_DESARROLLO;User ID=movpark;Password=movparkSql;TrustServerCertificate=true;MultipleActiveResultSets=true"    
   },
   "PathBase": "/"
 }
