arreglo del sidebar (libreria juan) y login - encriptacion de la contraseña proy:web y backoffice

--- a/Alpino/Ejemplo/Ejemplo.DemoComponent/appsettings.json
+++ b/Alpino/Ejemplo/Ejemplo.DemoComponent/appsettings.json
@@ -1,16 +1,13 @@
 {
-  "NotionsServicesUtilsConf": {
-    "HostUrl": "https://utils.gobdigital.com.ar"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DEV;Initial Catalog=Ejemplo.Desarrollo;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=True;Trust Server Certificate=True;Command Timeout=0"
-    //"DefaultConnection": "Data Source=10.0.5.19;Database=SGM_DESARROLLO;User ID=movpark;Password=movparkSql;TrustServerCertificate=true;MultipleActiveResultSets=true"    
-  }
+    //"DefaultConnection": "Data Source=DEV;Initial Catalog=EJEMPLO_DESARROLLO;Integrated Security=True;Persist Security Info=False;Pooling=False;Multiple Active Result Sets=False;Encrypt=True;Trust Server Certificate=True;Command Timeout=0"
+    "DefaultConnection": "Data Source=10.0.5.19;Database=EJEMPLO_DESARROLLO;User ID=movpark;Password=movparkSql;TrustServerCertificate=true;MultipleActiveResultSets=true"
+  },
+  "PathBase": "/"
 }
