--- a/Alpino/Ejemplo/Ejemplo.Web/Ejemplo.Web.csproj
+++ b/Alpino/Ejemplo/Ejemplo.Web/Ejemplo.Web.csproj
@@ -16,4 +16,8 @@
     <ProjectReference Include="..\Ejemplo.Utils\Ejemplo.Utils.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\css\components\" />
+  </ItemGroup>
+
 </Project>
